[package]
name = "russh"
version = "0.1.0"
authors = ["Pascal Friederich <paukul@gmail.com>"]

[lib]
name = "russh"
path = "src/lib.rs"

[[bin]]
name = "russh"
path = "src/bin.rs"

[dependencies]
log = "~0.4.1"
pretty_env_logger = "~0.2"
failure = "*"
failure_derive = "*"
byteorder = "1.2.3"
hexdump = "0.1.0"